refactor: migrate remaining Arrays.asList to List.of() (follow-up)
Motivation:
Follow-up to the initial collection factory migration, covering
remaining files that were missed in the first pass.

Modification:
Replace remaining Arrays.asList() with List.of() and
Collections.singleton() with Set.of() in 19 additional files.

Result:
More complete migration to Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization