@@ -15,7 +15,6 @@ package org.apache.pekko.stream.javadsl;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
@@ -45,7 +44,7 @@ public class LazyAndFutureSourcesTest extends StreamTestJupiter {
     CompletionStage<String> one = CompletableFuture.completedFuture("one");
     CompletionStage<List<String>> result = Source.completionStage(one).runWith(Sink.seq(), system);
 
-    assertEquals(Arrays.asList("one"), result.toCompletableFuture().get(3, TimeUnit.SECONDS));
+    assertEquals(List.of("one"), result.toCompletableFuture().get(3, TimeUnit.SECONDS));
   }
 
   @Test
@@ -57,7 +56,7 @@ public class LazyAndFutureSourcesTest extends StreamTestJupiter {
 
     CompletionStage<NotUsed> nestedMatVal = result.first();
     CompletionStage<List<String>> list = result.second();
-    assertEquals(Arrays.asList("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
+    assertEquals(List.of("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
     // Future adaption to completionstage of matval means we cannot count on matval future being
     // completed just because stream is
     nestedMatVal.toCompletableFuture().get(3, TimeUnit.SECONDS);
@@ -67,7 +66,7 @@ public class LazyAndFutureSourcesTest extends StreamTestJupiter {
   public void lazySingle() throws Exception {
     CompletionStage<List<String>> list = Source.lazySingle(() -> "one").runWith(Sink.seq(), system);
 
-    assertEquals(Arrays.asList("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
+    assertEquals(List.of("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
   }
 
   @Test
@@ -76,7 +75,7 @@ public class LazyAndFutureSourcesTest extends StreamTestJupiter {
         Source.lazyCompletionStage(() -> CompletableFuture.completedFuture("one"))
             .runWith(Sink.seq(), system);
 
-    assertEquals(Arrays.asList("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
+    assertEquals(List.of("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
   }
 
   @Test
@@ -86,7 +85,7 @@ public class LazyAndFutureSourcesTest extends StreamTestJupiter {
 
     CompletionStage<NotUsed> nestedMatVal = result.first();
     CompletionStage<List<String>> list = result.second();
-    assertEquals(Arrays.asList("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
+    assertEquals(List.of("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
     // Future adaption to completionstage of matval means we cannot count on matval future being
     // completed just because stream is
     nestedMatVal.toCompletableFuture().get(3, TimeUnit.SECONDS);
@@ -102,7 +101,7 @@ public class LazyAndFutureSourcesTest extends StreamTestJupiter {
 
     CompletionStage<NotUsed> nestedMatVal = result.first();
     CompletionStage<List<String>> list = result.second();
-    assertEquals(Arrays.asList("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
+    assertEquals(List.of("one"), list.toCompletableFuture().get(3, TimeUnit.SECONDS));
     // flatMap/thenCompose of matval means we cannot count on matval future being completed just
     // because stream is
     nestedMatVal.toCompletableFuture().get(3, TimeUnit.SECONDS);
